--- a/site/index.html
+++ b/site/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Hello world </title>
+	<title>Hello world helloooo</title>
 </head>
 <body>
 <h1>hello coursera</h1>
