--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,7 @@
 	<title>Hello world helloooo</title>
 </head>
 <body>
-<h1>hello coursera but hello world actually</h1>
+<h1>hello coursera but hello world</h1>
+<h1>hello again my friend and new friend</h1>
 </body>
 </html>
